--- a/core/resources/src/main/res/values-hu/strings.xml
+++ b/core/resources/src/main/res/values-hu/strings.xml
@@ -237,7 +237,7 @@
     <string name="sketch">Vázlat</string>
     <string name="threshold">Küszöb</string>
     <string name="quantizationLevels">Kvantálási szintek</string>
-    <string name="snooth_toon">Sima ton</string>
+    <string name="smooth_toon">Sima ton</string>
     <string name="toon">Toon</string>
     <string name="rgb_filter">RGB szűrő</string>
     <string name="false_color">Hamis szín</string>
@@ -412,7 +412,7 @@
     <string name="only_clip_sub">A tárhelyre mentés nem történik meg, a képet csak a vágólapra próbálja meg elhelyezni</string>
     <string name="saved_to_original">Fájl felülírva a következővel: %s az eredeti célhelyen</string>
     <string name="magnifier_sub">Engedélyezi a nagyítót az ujj tetején rajzi módokban a jobb hozzáférhetőség érdekében</string>
-    <string name="force_exif_widget_inital_value">Kezdeti érték kényszerítése</string>
+    <string name="force_exif_widget_initial_value">Kezdeti érték kényszerítése</string>
     <string name="rate">Mérték</string>
     <string name="rate_app_sub">Ez az alkalmazás teljesen ingyenes, ha azt szeretné, hogy nagyobb legyen, csillagozza meg a projektet a Githubon 😄</string>
     <string name="segmentation_mode_auto_only">Csak automata</string>
@@ -769,7 +769,7 @@
     <string name="toggle_tap">Toggle Tap</string>
     <string name="transparency">Átláthatóság</string>
     <string name="magnifier">Nagyító</string>
-    <string name="force_exif_widget_inital_value_sub">Az exif widgetet kezdetben ellenőrizni kényszeríti</string>
+    <string name="force_exif_widget_initial_value_sub">Az exif widgetet kezdetben ellenőrizni kényszeríti</string>
     <string name="allow_multiple_languages">Több nyelv engedélyezése</string>
     <string name="favorite">Kedvenc</string>
     <string name="no_favorite_filters">Még nincsenek kedvenc szűrők hozzáadva</string>
